--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,3 +1,11 @@
 page-welcome {
+    
+
+    .bg-image {
+        background-image: url('../assets/imgs/flower.jpg');
+        background-image: no-repeat;
+        background-position: center;
+        background-size: contain;
+    }
 
 }
